fix:     text-align:start; удвлен

--- a/style/style.scss
+++ b/style/style.scss
@@ -94,7 +94,6 @@
 
    .title {
     font-size: $fontsize-tablet-h2;
-    text-align:start;
 
    }
 
@@ -119,7 +118,6 @@
   
      .title {
       font-size:$fontsize-mobile-h2;
-      text-align:start;
   
      }
   
